--- a/desafios/bikcraft myself/index.html
+++ b/desafios/bikcraft myself/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,38 +20,46 @@
             </ul>
         </nav>
     </header>
-    <main class="conteudo">
-        <article>
-            <div class="introducao">
-                <span class="detalhe"></span>
-                <h1>Bicicletas Feitas a Mão</h1>
+
+    <main>
+        <article class="conteudo">
+            <div class="introducao" aria-labelledby="label-introducao">
+                <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
                 <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
                 <a class="botao" href="/">VER MAIS</a>
             </div>
-            <img src="./assets/bicicleta.jpg" alt="bicicleta Bikcraft Preta">
+
+            <div class="introducao-cover">
+                <img src="./assets/bicicleta.jpg" alt="bicicleta Bikcraft Preta">
+            </div>
+
         </article>
 
-        <article>
-            <h2 class="subtitulo">Vantagens Bikcraft</h2>
-            <div class="vantagens">
-                <div class="vantagens-itens">
+        <article class="conteudo conteudo-vantagens" aria-labelledby="label-vantagens">
+            <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
+            <ul class="vantagens">
+                <li class="vantagens-itens">
                     <img src="./assets/eletrica.svg" alt="motor eletrico">
                     <h3>Motor Elétrico</h3>
                     <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
-                </div>
-                <div class="vantagens-itens">
+                </li>
+                <li class="vantagens-itens">
                     <img src="./assets/velocidade.svg" alt="">
                     <h3>40 km/h</h3>
                     <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-                </div>
-                <div class="vantagens-itens">
+                </li>
+                <li class="vantagens-itens">
                     <img src="./assets/rastreador.svg" alt="">
                     <h3>Rastreador</h3>
                     <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-                </div>
-            </div>
+                </li>
+            </ul>
         </article>
     </main>
+
+    <footer class="rodape">
+        <p>Bikcraft. Alguns Direitos Reservados.</p>
+    </footer>
     
 </body>
 </html>
